Fix sidebar sizing and z-index

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -16,3 +16,9 @@
         width: 250px;
     }
 }
+
+@media only screen and (max-width:400px){
+    .logo {
+        width: 200px;
+    }
+}
